# crosswords

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
CrosswordsGame/: CMakeLists.txt
CrosswordsGame/data/: UnitOfWork.cpp  UnitOfWork.h
CrosswordsGame/qml/: CrosswordsGame.qml  Letter.qml  QuestionIndicator.qml
CrosswordsGame/repositories/: CrosswordsRepository.cpp  CrosswordsRepository.h  CrosswordsResponseRepository.cpp  CrosswordsResponseRepository.h  ICrosswordsRepository.h
CrosswordsGame/resources/sql/: crosswords.sql  delete_crosswords_responses.sql  insert_crosswords_response.sql  schema.sql  select_all_crosswords.sql  select_crosswords_responses.sql
CrosswordsGame/tests/: CMakeLists.txt
CrosswordsGame/tests/repositories/: CMakeLists.txt  TestCrosswordsRepository.cpp  main.cpp
CrosswordsGame/utils/: ResourceUtils.cpp  ResourceUtils.h
CrosswordsGame/viewmodels/: Crosswords.cpp  Crosswords.h  CrosswordsModel.cpp  CrosswordsModel.h  CrosswordsResponse.cpp  CrosswordsResponse.h
Native/: Android.cpp  Android.h  CMakeLists.txt
android/: AndroidManifest.xml  build.gradle
android/certs/: crosswords.keystore
android/res/drawable/: splashscreen.xml  splashscreen_land.xml  splashscreen_port.xml
android/res/values/: style.xml
cmake/: CodeCoverage.cmake  Dependencies.cmake
controls/: CrosswordsItemDelegate.qml  HeaderBar.qml  Page.qml  ScrollablePage.qml
resources/: qtquickcontrols2.conf
resources/icons/: CMakeLists.txt  material-baseline.cmake  material-outline.cmake  material-round.cmake  material-sharp.cmake  material-twotone.cmake  material.cmake
resources/icons/material/: index.theme
resources/icons/material-baseline/: index.theme
resources/icons/material-outline/: index.theme
resources/icons/material-round/: index.theme
resources/icons/material-sharp/: index.theme
resources/icons/material-twotone/: index.theme
tests/: CMakeLists.txt
tests/CrosswordsGame/repositories/: CMakeLists.txt  TestCrosswordsRepository.cpp
